--- a/index.html
+++ b/index.html
@@ -7,6 +7,180 @@
     <title>Capstone</title>
   </head>
   <body>
+    <!-- Header -->
+    <header>
+      <div id="logo">
+        <span><img src="./resources/images/ic-logo.svg" alt="logo" /></span>
+        <span><a>Colmar</a></span>
+        <span><a>Academy</a></span>
+      </div>
+      <nav class="desktop">
+        <ul>
+          <li><a>On campus</a></li>
+          <li><a>Online</a></li>
+          <li><a>For companies</a></li>
+          <li><a>Sign in</a></li>
+        </ul>
+      </nav>
+      <nav class="mobile">
+        <ul>
+          <li><a><img src="./resources/images/ic-logo.svg" alt="logo" /></a></li>
+          <li><a><img src="./resources/images/ic-on-campus.svg" alt="campus" /></a></li>
+          <li><a><img src="./resources/images/ic-online.svg" alt="online" /></a></li>
+          <li><a><img src="./resources/images/ic-login.svg" alt="login" /></a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Banner -->
+    <div id="banner">
+      <div class="picture">
+        <img src="./resources/images/banner.jpg" alt="banner" />
+      </div>
+      <div class="text">
+        <h1>Learn something new everyday</h1>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <h3>Start here</h3>
+      </div>
+    </div>
+    <!-- Features -->
+    <div id="features">
+      <div class="main">
+        <div class="picture">
+          <img src="./resources/images/information-main.jpg" alt="main" />
+        </div>
+        <div class="text">
+          <h1>It doesn't hurt to keep practicing</h1>
+          <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
+          <h3>Emanuel, Sr Strategist at Hiring.com</h3>
+        </div>
+      </div>
+      <div class="dates">
+        <div class="orientation info">
+          <div class="picture">
+            <img src="./resources/images/information-orientation.jpg" alt="orientation" />
+          </div>
+          <div class="text">
+            <h1>Orientation date</h1>
+            <h2>Tue 10/11 & Wed 10/12: 8am-3pm</h2>
+            <h3>Read more</h3>
+          </div>
+        </div>
+        <div class="campus info">
+          <div class="picture">
+            <img src="./resources/images/information-campus.jpg" alt="campus" />
+          </div>
+          <div class="text">
+            <h1>Our campus</h1>
+            <h2>Find which campus is close by you</h2>
+            <h3>Read more</h3>
+          </div>
+        </div>
+        <div class="lecture info">
+          <div class="picture">
+            <img src="./resources/images/information-guest-lecture.jpg" alt="lecture" />
+          </div>
+          <div class="text">
+            <h1>Our guest lecture</h1>
+            <h2>Join a keynote with Oliver Sack about music in medical treatment</h2>
+            <h3>Read more</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Majors -->
+    <div id="majors">
+      <h1>Start learning</h1>
+      <div class="courses">
+        <div class="picture">
+          <img src="./resources/images/course-software.jpg" alt="software" />
+        </div>
+        <div class="text">
+          <h1>Software engineering</h1>
+          <h2>COURSES</h2>
+          <h3>Web Development, Mobile Development, iOT, APIs</h3>
+        </div>
+        <div class="picture">
+          <img src="./resources/images/course-computer-art.jpg" alt="computer" />
+        </div>
+        <div class="text">
+          <h1>Computer art</h1>
+          <h2>COURSES</h2>
+          <h3>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h3>
+        </div>
+        <div class="picture">
+          <img src="./resources/images/course-design.jpg" alt="design" />
+        </div>
+        <div class="text">
+          <h1>Design</h1>
+          <h2>COURSES</h2>
+          <h3>User Experience Design, User Research, Visual Design</h3>
+        </div>
+        <div class="picture">
+          <img src="./resources/images/course-data.jpg" alt="data" />
+        </div>
+        <div class="text">
+          <h1>Data</h1>
+          <h2>COURSES</h2>
+          <h3>Data Science, Big Data, SQL, Data Visualization</h3>
+        </div>
+        <div class="picture">
+          <img src="./resources/images/course-business.jpg" alt="business" />
+        </div>
+        <div class="text">
+          <h1>Business</h1>
+          <h2>COURSES</h2>
+          <h3>Product Development, Business Development, Startup</h3>
+        </div>
+        <div class="picture">
+          <img src="./resources/images/course-marketing.jpg" alt="marketing" />
+        </div>
+        <div class="text">
+          <h1>Marketing</h1>
+          <h2>COURSES</h2>
+          <h3>Analytics, Content Marketing, Mobile Marketing</h3>
+        </div>
+      </div>
+    </div>
+    <!-- Exhibits -->
+    <div id="exhibits">
+      <h1>Thesis exhibit</h1>
+      <div class="video">
+        <div class="picture">
+          <video width="320" height="240" controls>
+          <source src="./resources/videos/thesis.mp4" type="video/mp4">
+        </div>
+        <div class="text">
+          <h1>Reimagine urban</h1>
+          <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
+        </div>
+      </div>
+      <div class="thesis">
+        <div class="picture">
+          <img src="./resources/images/thesis-fisma.jpg" alt="prototype" />
+        </div>
+        <div class="text">
+          <h1>Fisma: Design and Prototype</h1>
+          <h2>Designer showcase of new prototype product</h2>
+        </div>
+        <div class="picture">
+          <img src="./resources/images/thesis-now-and-then.jpg" alt="new york" />
+        </div>
+        <div class="text">
+          <h1>Now and then</h1>
+          <h2>Research study about New York</h2>
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
+    <footer>
+      <div class="copyright">
+        <span>&copy 2016 Colmar Academy. All rights reserved</span>
+      </div>
+      <div class="terms">
+        <span>Terms</span>
+        <span>Privacy</span>
+      </div>
+    </footer>
 
   </body>
 </html>
