--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     <!-- Banner -->
 
     <div class="container" id="banner">
-      <div class="picture">
-        <img src="./resources/images/banner.jpg" alt="banner" />
-      </div>
+      <img src="./resources/images/banner.jpg" alt="banner" />
       <div class="text">
         <h1>Learn something new everyday</h1>
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
@@ -49,20 +47,14 @@
 
     <div class="container" id="features">
       <div class="main">
-        <div class="picture">
-          <img src="./resources/images/information-main.jpg" alt="main" />
-        </div>
-        <div class="text">
-          <h1>It doesn't hurt to keep practicing</h1>
-          <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
-          <h3>Emanuel, Sr Strategist at Hiring.com</h3>
-        </div>
+        <img src="./resources/images/information-main.jpg" alt="main" />
+        <h1>It doesn't hurt to keep practicing</h1>
+        <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
+        <h3>Emanuel, Sr Strategist at Hiring.com</h3>
       </div>
       <div class="dates">
         <div class="orientation info">
-          <div class="picture">
-            <img src="./resources/images/information-orientation.jpg" alt="orientation" />
-          </div>
+          <img src="./resources/images/information-orientation.jpg" alt="orientation" />
           <div class="text">
             <h1>Orientation date</h1>
             <h2>Tue 10/11 & Wed 10/12: 8am-3pm</h2>
@@ -70,9 +62,7 @@
           </div>
         </div>
         <div class="campus info">
-          <div class="picture">
-            <img src="./resources/images/information-campus.jpg" alt="campus" />
-          </div>
+          <img src="./resources/images/information-campus.jpg" alt="campus" />
           <div class="text">
             <h1>Our campus</h1>
             <h2>Find which campus is close by you</h2>
@@ -80,9 +70,7 @@
           </div>
         </div>
         <div class="lecture info">
-          <div class="picture">
-            <img src="./resources/images/information-guest-lecture.jpg" alt="lecture" />
-          </div>
+          <img src="./resources/images/information-guest-lecture.jpg" alt="lecture" />
           <div class="text">
             <h1>Our guest lecture</h1>
             <h2>Join a keynote with Oliver Sack about music in medical treatment</h2>
@@ -95,12 +83,10 @@
     <!-- Majors -->
 
     <div class="container" id="majors">
-      <h1>Start learning</h1>
+      <h1 class="top">Start learning</h1>
       <div class="sections">
         <div class="courses">
-          <div class="picture">
-            <img src="./resources/images/course-software.jpg" alt="software" />
-          </div>
+          <img src="./resources/images/course-software.jpg" alt="software" />
           <div class="text">
             <h1>Software engineering</h1>
             <h2>COURSES</h2>
@@ -108,9 +94,7 @@
           </div>
         </div>
         <div class="courses">
-          <div class="picture">
-            <img src="./resources/images/course-computer-art.jpg" alt="computer" />
-          </div>
+          <img src="./resources/images/course-computer-art.jpg" alt="computer" />
           <div class="text">
             <h1>Computer art</h1>
             <h2>COURSES</h2>
@@ -118,9 +102,7 @@
           </div>
         </div>
         <div class="courses">
-          <div class="picture">
-            <img src="./resources/images/course-design.jpg" alt="design" />
-          </div>
+          <img src="./resources/images/course-design.jpg" alt="design" />
           <div class="text">
             <h1>Design</h1>
             <h2>COURSES</h2>
@@ -128,9 +110,7 @@
           </div>
         </div>
         <div class="courses">
-          <div class="picture">
-            <img src="./resources/images/course-data.jpg" alt="data" />
-          </div>
+          <img src="./resources/images/course-data.jpg" alt="data" />
           <div class="text">
             <h1>Data</h1>
             <h2>COURSES</h2>
@@ -138,9 +118,7 @@
           </div>
         </div>
         <div class="courses">
-          <div class="picture">
-            <img src="./resources/images/course-business.jpg" alt="business" />
-          </div>
+          <img src="./resources/images/course-business.jpg" alt="business" />
           <div class="text">
             <h1>Business</h1>
             <h2>COURSES</h2>
@@ -148,9 +126,7 @@
           </div>
         </div>
         <div class="courses">
-          <div class="picture">
-            <img src="./resources/images/course-marketing.jpg" alt="marketing" />
-          </div>
+          <img src="./resources/images/course-marketing.jpg" alt="marketing" />
           <div class="text">
             <h1>Marketing</h1>
             <h2>COURSES</h2>
@@ -163,7 +139,7 @@
     <!-- Exhibits -->
 
     <div class="container" id="exhibits">
-      <h1>Thesis exhibit</h1>
+      <h1 class="top">Thesis exhibit</h1>
       <div class="showing">
         <div class="video">
           <div class="picture">
