Desktop Specs Completed

--- a/index.html
+++ b/index.html
@@ -142,29 +142,25 @@
       <h1 class="top">Thesis exhibit</h1>
       <div class="showing">
         <div class="video">
-          <div class="picture">
-            <video width="1080" height="640" controls>
-            <source src="./resources/videos/thesis.mp4" type="video/mp4">
-          </div>
-          <div class="text">
-            <h1>Reimagine urban</h1>
-            <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
-          </div>
+          <video width="1056" height="594">
+          <source src="./resources/videos/thesis.mp4" type="video/mp4"></video>
+          <h1>Reimagine urban</h1>
+          <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
         </div>
         <div class="thesis">
-          <div class="picture">
+          <div class="prototype info">
             <img src="./resources/images/thesis-fisma.jpg" alt="prototype" />
+            <div class="text">
+              <h1>Fisma: Design and Prototype</h1>
+              <h2>Designer showcase of new prototype product</h2>
+            </div>
           </div>
-          <div class="text">
-            <h1>Fisma: Design and Prototype</h1>
-            <h2>Designer showcase of new prototype product</h2>
-          </div>
-          <div class="picture">
+          <div class="newyork info">
             <img src="./resources/images/thesis-now-and-then.jpg" alt="new york" />
-          </div>
-          <div class="text">
-            <h1>Now and then</h1>
-            <h2>Research study about New York</h2>
+            <div class="text">
+              <h1>Now and then</h1>
+              <h2>Research study about New York</h2>
+            </div>
           </div>
         </div>
       </div>
@@ -174,7 +170,8 @@
 
     <footer class="container">
       <div class="copyright">
-        <span>&copy 2016 Colmar Academy. All rights reserved</span>
+        <span>&copy 2016 Colmar Academy.</span>
+        <span>All rights reserved</span>
       </div>
       <div class="terms">
         <span>Terms</span>
