--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         <a>Sign in</a>
       </nav>
       <nav class="mobile">
-        <ul>
-          <li><a><img src="./resources/images/ic-logo.svg" alt="logo" /></a></li>
-          <li><a><img src="./resources/images/ic-on-campus.svg" alt="campus" /></a></li>
-          <li><a><img src="./resources/images/ic-online.svg" alt="online" /></a></li>
-          <li><a><img src="./resources/images/ic-login.svg" alt="login" /></a></li>
-        </ul>
+        <img src="./resources/images/ic-logo.svg" alt="logo" />
+        <img src="./resources/images/ic-on-campus.svg" alt="campus" />
+        <img src="./resources/images/ic-online.svg" alt="online" />
+        <img src="./resources/images/ic-login.svg" alt="login" />
       </nav>
     </header>
 
@@ -54,7 +52,8 @@
       </div>
       <div class="dates">
         <div class="orientation info">
-          <img src="./resources/images/information-orientation.jpg" alt="orientation" />
+          <img class="desktop" src="./resources/images/information-orientation.jpg" alt="orientation" />
+          <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="orientation" />
           <div class="text">
             <h1>Orientation date</h1>
             <h2>Tue 10/11 & Wed 10/12: 8am-3pm</h2>
@@ -62,7 +61,8 @@
           </div>
         </div>
         <div class="campus info">
-          <img src="./resources/images/information-campus.jpg" alt="campus" />
+          <img class="desktop" src="./resources/images/information-campus.jpg" alt="campus" />
+          <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="campus" />
           <div class="text">
             <h1>Our campus</h1>
             <h2>Find which campus is close by you</h2>
@@ -70,7 +70,8 @@
           </div>
         </div>
         <div class="lecture info">
-          <img src="./resources/images/information-guest-lecture.jpg" alt="lecture" />
+          <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="lecture" />
+          <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="lecture" />
           <div class="text">
             <h1>Our guest lecture</h1>
             <h2>Join a keynote with Oliver Sack about music in medical treatment</h2>
@@ -139,10 +140,11 @@
     <!-- Exhibits -->
 
     <div class="container" id="exhibits">
-      <h1 class="top">Thesis exhibit</h1>
+      <h1 class="top">Thesis exhibits</h1>
       <div class="showing">
         <div class="video">
-          <video width="1056" height="594">
+          <video class="desktop" width="1056" height="594" controls>
+          <video class="mobile" width="450" height="253" controls>
           <source src="./resources/videos/thesis.mp4" type="video/mp4"></video>
           <h1>Reimagine urban</h1>
           <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
