--- a/index.html
+++ b/index.html
@@ -142,9 +142,14 @@
     <div class="container" id="exhibits">
       <h1 class="top">Thesis exhibits</h1>
       <div class="showing">
-        <div class="video">
-          <video class="desktop" width="1056" height="594" controls>
-          <video class="mobile" width="450" height="253" controls>
+        <div class="video desktop">
+          <video width="1056px" height="594px" controls>
+          <source src="./resources/videos/thesis.mp4" type="video/mp4"></video>
+          <h1>Reimagine urban</h1>
+          <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
+        </div>
+        <div class="video mobile">
+          <video width="450px" height="253px" controls>
           <source src="./resources/videos/thesis.mp4" type="video/mp4"></video>
           <h1>Reimagine urban</h1>
           <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
