--- a/index.html
+++ b/index.html
@@ -4,31 +4,38 @@
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet" />
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
     <meta charset="utf-8">
+    <link rel="icon" href="./<favicon-name>.ico" type="image/x-icon">
     <title>Capstone</title>
   </head>
   <body>
 
     <!-- Header -->
 
-    <header class="container">
+    <header>
       <div class="logo">
         <img src="./resources/images/ic-logo.svg" alt="logo" />
-        <h4 id="first">COLMAR</h4>
+        <h4 id="first">COLMAR</h4></span>
         <h4 id="second">ACADEMY</h4>
       </div>
       <nav class="desktop">
-        <a>On campus</a>
-        <a>Online</a>
-        <a>For companies</a>
-        <a>Sign in</a>
+        <ul>
+          <li><a href="#">On campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For companies</a></li>
+          <li><a href="#">Sign in</a></li>
+        </ul>
       </nav>
       <nav class="mobile">
-        <img src="./resources/images/ic-logo.svg" alt="logo" />
-        <img src="./resources/images/ic-on-campus.svg" alt="campus" />
-        <img src="./resources/images/ic-online.svg" alt="online" />
-        <img src="./resources/images/ic-login.svg" alt="login" />
+        <img src="./resources/images/ic-logo.svg" alt="logo" href="#"/>
+        <img src="./resources/images/ic-on-campus.svg" alt="campus" href="#"/>
+        <img src="./resources/images/ic-online.svg" alt="online" href="#"/>
+        <img src="./resources/images/ic-login.svg" alt="login" href="#"/>
       </nav>
     </header>
+
+    <!-- Container -->
+
+    <div class="main-content">
 
     <!-- Banner -->
 
@@ -143,14 +150,20 @@
       <h1 class="top">Thesis exhibits</h1>
       <div class="showing">
         <div class="video desktop">
-          <video width="1056px" height="594px" controls>
-          <source src="./resources/videos/thesis.mp4" type="video/mp4"></video>
+          <video width="1056px" height="594px" controls alt="thesis video">
+            <source src="./resources/videos/thesis.mp4" type="video/mp4">
+            <source src="./resources/videos/thesis.mp4" type="video/webm">
+            <p>Your browser doesn't support HTML5 video. Here is a <a href="./resources/videos/thesis.mp4">link to the video</a> instead.</p>
+          </video>
           <h1>Reimagine urban</h1>
           <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
         </div>
         <div class="video mobile">
-          <video width="450px" height="253px" controls>
-          <source src="./resources/videos/thesis.mp4" type="video/mp4"></video>
+          <video width="442px" height="250px" controls alt="thesis video">
+            <source src="./resources/videos/thesis.mp4" type="video/mp4">
+            <source src="./resources/videos/thesis.mp4" type="video/webm">
+            <p>Your browser doesn't support HTML5 video. Here is a <a href="./resources/videos/thesis.mp4">link to the video</a> instead.</p>
+          </video>
           <h1>Reimagine urban</h1>
           <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
         </div>
@@ -174,7 +187,6 @@
     </div>
 
     <!-- Footer -->
-
     <footer class="container">
       <div class="copyright">
         <span>&copy 2016 Colmar Academy.</span>
@@ -185,6 +197,6 @@
         <span>Privacy</span>
       </div>
     </footer>
-
+    </div>
   </body>
 </html>
