--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
     </header>
 
-    <!-- Container -->
+    <!-- Main Content -->
 
     <div class="main-content">
 
@@ -44,7 +44,7 @@
       <div class="text">
         <h1>Learn something new everyday</h1>
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-        <h3>Start here</h3>
+        <h3><a href="#">Start here</a></h3>
       </div>
     </div>
 
@@ -64,7 +64,7 @@
           <div class="text">
             <h1>Orientation date</h1>
             <h2>Tue 10/11 & Wed 10/12: 8am-3pm</h2>
-            <h3>Read more</h3>
+            <h3><a href="#">Read more</a></h3>
           </div>
         </div>
         <div class="campus info">
@@ -73,7 +73,7 @@
           <div class="text">
             <h1>Our campus</h1>
             <h2>Find which campus is close by you</h2>
-            <h3>Read more</h3>
+            <h3><a href="#">Read more</a></h3>
           </div>
         </div>
         <div class="lecture info">
@@ -82,7 +82,7 @@
           <div class="text">
             <h1>Our guest lecture</h1>
             <h2>Join a keynote with Oliver Sack about music in medical treatment</h2>
-            <h3>Read more</h3>
+            <h3><a href="#">Read more</a></h3>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
           <div class="text">
             <h1>Software engineering</h1>
             <h2>COURSES</h2>
-            <h3>Web Development, Mobile Development, iOT, APIs</h3>
+            <h3><a href="#">Web Development, Mobile Development, iOT, APIs</a></h3>
           </div>
         </div>
         <div class="courses">
@@ -106,7 +106,7 @@
           <div class="text">
             <h1>Computer art</h1>
             <h2>COURSES</h2>
-            <h3>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h3>
+            <h3><a href="#">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</a></h3>
           </div>
         </div>
         <div class="courses">
@@ -114,7 +114,7 @@
           <div class="text">
             <h1>Design</h1>
             <h2>COURSES</h2>
-            <h3>User Experience Design, User Research, Visual Design</h3>
+            <h3><a href="#">User Experience Design, User Research, Visual Design</a></h3>
           </div>
         </div>
         <div class="courses">
@@ -122,7 +122,7 @@
           <div class="text">
             <h1>Data</h1>
             <h2>COURSES</h2>
-            <h3>Data Science, Big Data, SQL, Data Visualization</h3>
+            <h3><a href="#">Data Science, Big Data, SQL, Data Visualization</a></h3>
           </div>
         </div>
         <div class="courses">
@@ -130,7 +130,7 @@
           <div class="text">
             <h1>Business</h1>
             <h2>COURSES</h2>
-            <h3>Product Development, Business Development, Startup</h3>
+            <h3><a href="#">Product Development, Business Development, Startup</a></h3>
           </div>
         </div>
         <div class="courses">
@@ -138,7 +138,7 @@
           <div class="text">
             <h1>Marketing</h1>
             <h2>COURSES</h2>
-            <h3>Analytics, Content Marketing, Mobile Marketing</h3>
+            <h3><a href="#">Analytics, Content Marketing, Mobile Marketing</a></h3>
           </div>
         </div>
       </div>
