--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class="logo">
         <img src="./resources/images/ic-logo.svg" alt="logo" />
-        <h4 id="first">COLMAR</h4></span>
+        <h4 id="first">COLMAR</h4>
         <h4 id="second">ACADEMY</h4>
       </div>
       <nav class="desktop">
