--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </ul>
       </nav>
       <nav class="mobile">
-        <img src="./resources/images/ic-logo.svg" alt="logo" href="#"/>
-        <img src="./resources/images/ic-on-campus.svg" alt="campus" href="#"/>
-        <img src="./resources/images/ic-online.svg" alt="online" href="#"/>
-        <img src="./resources/images/ic-login.svg" alt="login" href="#"/>
+        <img src="./resources/images/ic-logo.svg" alt="logo" />
+        <img src="./resources/images/ic-on-campus.svg" alt="campus" />
+        <img src="./resources/images/ic-online.svg" alt="online" />
+        <img src="./resources/images/ic-login.svg" alt="login" />
       </nav>
     </header>
 
@@ -150,7 +150,7 @@
       <h1 class="top">Thesis exhibits</h1>
       <div class="showing">
         <div class="video desktop">
-          <video width="1056px" height="594px" controls alt="thesis video">
+          <video width="1056px" height="594px" controls>
             <source src="./resources/videos/thesis.mp4" type="video/mp4">
             <source src="./resources/videos/thesis.mp4" type="video/webm">
             <p>Your browser doesn't support HTML5 video. Here is a <a href="./resources/videos/thesis.mp4">link to the video</a> instead.</p>
@@ -159,7 +159,7 @@
           <h2>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</h2>
         </div>
         <div class="video mobile">
-          <video width="442px" height="250px" controls alt="thesis video">
+          <video width="442px" height="250px" controls>
             <source src="./resources/videos/thesis.mp4" type="video/mp4">
             <source src="./resources/videos/thesis.mp4" type="video/webm">
             <p>Your browser doesn't support HTML5 video. Here is a <a href="./resources/videos/thesis.mp4">link to the video</a> instead.</p>
